Lab 2 prasaj ja ana za ova na konsultaci.